# ARK

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/agents/: crm_agent.py  identity_agent.py  legal_agent.py
backend/app/: __init__.py  config.py  main.py  tasks.py
backend/app/agents/: __init__.py  agent_registry.py  base_agent.py  communication_agent.py  it_agent.py  llm_factory.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  customers.py  health.py  onboarding.py
backend/app/core/: events.py  exceptions.py  logging_config.py  middleware.py  security.py
backend/app/database/: session.py
backend/app/models/database/: __init__.py  base.py  customer.py  document.py  onboarding_workflow.py  user.py  workflow_step.py
backend/app/models/schemas/: __init__.py  common.py  customer.py  onboarding.py
backend/app/orchestrator/: workflow_engine.py
backend/app/orchestrator/graphs/: onboarding_graph.py
backend/migrations/: env.py
backend/migrations/versions/: 20260201_0829_5ef3735b469f_initial_migration.py  20260201_0831_0c47f9d1966a_initial.py
backend/orchestrator/: __init__.py  workflow_engine.py
docker/backend/: Dockerfile.dev
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/components/analytics/: breakdown-charts.tsx  customer-analytics.tsx  kpi-cards.tsx  (+2 more)
frontend/src/lib/: utils.ts
frontend/src/styles/: globals.css
(+11 files in other folders)
